# polyhedral_study_assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
ai/skills/: SKILL.md
ai/skills/references/: research-workflow.md
docs/: adapter-standard.md  backend-notes.md  cdd-notes.md  cmir-playbook.md  coverage-protocol.md  facet-analysis-template.md  porta-notes.md  proof-status-rubric.md  reporting-standard.md  research-workflow.md
docs/cmir_patterns/: coefficient_tightening_pattern.md  combining_all_patterns.md  mixing_pattern.md  residual_pattern.md
examples/malp/: README.md  derive.py  families.py  model.py  study.py
examples/malp/artifacts/: malp_report.md  malp_summary.json
memory/facets/malp/: facet_signatures.json
memory/family/malp/: family_memory.json
reports/: malp_report.md  malp_state.json  next_malp_claude_task.md  regulator_decision.json
scripts/: cdd_spike.py  psa_loop.py  study.py
src/psa/: binary_points.py  cmir.py  coverage.py  derivation.py  family.py  inequality.py  normalize.py  report.py  validity.py
src/psa/agent/: executors.py  prompt_builder.py  regulator.py  state.py
src/psa/backends/: cdd.py
tasks/: TASK_POOL.json
tests/: conftest.py  test_binary_points.py  test_cdd_backend.py  test_coverage.py  test_malp_derive.py  test_malp_families.py  test_malp_model.py  test_malp_study.py  test_normalize.py  test_validity.py
