[project]
name = "polyhedral-study-assistant"
version = "0.1.0"
description = "A research harness for studying convex hull descriptions of integer linear sets."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Yachen Liu" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
cdd = [
  "pycddlib>=3.0.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"